fixed spacing for mobile columns.

--- a/BlogPosts/css/style.css
+++ b/BlogPosts/css/style.css
@@ -168,6 +168,19 @@ header ul li a:hover {
         font-size: 22px;
         font-weight: 300;
     }
+
+    .BlogPostClickable h2 {
+        font-weight: 500;
+        text-decoration: none;
+        text-align: center;
+        margin-top: 25px;
+        font-size: 20px;
+    }
+
+    .BlogPostClickable p {
+        margin: 15px;
+        font-size: 14px;
+    }
   }
 
 /* Main Blogpost nav CSS */
@@ -232,4 +245,16 @@ header ul li a:hover {
     background-attachment: scroll;
     background-position: center;
     box-shadow: 0px 15px 10px -15px #111; 
+}
+
+@media only screen and (max-width: 1330px) {
+    .BlogPostRowContainer {
+        width: 60vw;
+        height: 85vh;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        flex-wrap: wrap;
+        align-items: center;
+    }
 }
